# DOT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  batch.py  install_Mac.py  install_Ubuntu.py
FracCuts/: ADMMDDTimeStepper.cpp  ADMMDDTimeStepper.hpp  ADMMTimeStepper.cpp  ADMMTimeStepper.hpp  AnimScripter.cpp  AnimScripter.hpp  Config.cpp  Config.hpp  DADMMTimeStepper.cpp  DADMMTimeStepper.hpp  Energy.cpp  Energy.hpp  IglUtils.cpp  IglUtils.hpp  NeoHookeanEnergy.hpp  Optimizer.cpp  Optimizer.hpp  PardisoSolver.cpp  Scaffold.cpp  Scaffold.hpp  SymStretchEnergy.cpp  SymStretchEnergy.hpp  TriangleSoup.cpp  TriangleSoup.hpp  Types.hpp  main.cpp
FracCuts.xcodeproj/: project.pbxproj
FracCuts/CollisionObject/: CollisionObject.h  HalfSpace.cpp  HalfSpace.hpp  Sphere.cpp  Sphere.hpp
FracCuts/Energy/: Energy.cpp  Energy.hpp
FracCuts/Energy/Collision/: SoftPenaltyCollisionEnergy.cpp  SoftPenaltyCollisionEnergy.hpp
FracCuts/Energy/Connectivity/: CohesiveEnergy.cpp  CohesiveEnergy.hpp  SeparationEnergy.cpp  SeparationEnergy.hpp
FracCuts/Energy/Geometry_Isometry/: ARAPEnergy.cpp  ARAPEnergy.hpp  SymStretchEnergy.cpp  SymStretchEnergy.hpp
FracCuts/Energy/Physics_Elasticity/: FixedCoRotEnergy.cpp  FixedCoRotEnergy.hpp  NeoHookeanEnergy.cpp  NeoHookeanEnergy.hpp
FracCuts/LinSysSolver/: CHOLMODSolver.cpp  CHOLMODSolver.hpp  EigenLibSolver.cpp  EigenLibSolver.hpp  LinSysSolver.hpp  PardisoSolver.cpp  PardisoSolver.hpp
FracCuts/TimeStepper/: ADMMDDTimeStepper.cpp  ADMMDDTimeStepper.hpp  ADMMTimeStepper.cpp  ADMMTimeStepper.hpp  DADMMTimeStepper.cpp  DADMMTimeStepper.hpp  Optimizer.cpp  Optimizer.hpp
FracCuts/Utils/: AutoFlipSVD.hpp  CHOLMODSolver.cpp  CHOLMODSolver.hpp  ClosedFormSVD2d.hpp  Diagnostic.hpp  IglUtils.cpp  IglUtils.hpp  METIS.cpp  METIS.hpp  MeshProcessing.hpp  OSQP.h  Timer.hpp  Triplet.h  Types.hpp  get_feasible_steps.cpp  get_feasible_steps.hpp
cmake/: DOTDependencies.cmake  DOTDownloadExternal.cmake  FindLIBIGL.cmake
input/: bar17K_twist_DOT.txt  bend.primitive  bunny5K_LTSS_DOT.txt  hang.primitive  null.primitive  onepoint.primitive  random.primitive  squash.primitive  stretch.primitive
input/2D/: bend.txt  hang.txt  null.txt  onepoint.txt  random.txt  squash.txt  stretch.txt
input/allScripts3D/: 32770_tetmesh.primitive  buddha2_f10000.primitive  bunny.primitive  cow_head.primitive  horse_f10000.msh.primitive  kingkong_f20000.primitive  male_2_f20000.primitive  sphere.primitive  sphere_uniRemesh.primitive  triceratops.primitive
input/otherMethods/: monkey18K_TSS_ADMMDD_E2.5e4.txt  monkey18K_TSS_ADMMPD_E2.5e4.txt  monkey18K_TSS_GSDD_E2.5e4.txt  monkey18K_TSS_LBFGSHI_E2.5e4.txt  monkey18K_TSS_LBFGSH_E2.5e4.txt  monkey18K_TSS_LBFGSJH_E2.5e4.txt  monkey18K_TSS_LBFGSPD_E2.5e4.txt  monkey18K_TSS_PN_E2.5e4.txt
input/scalability/: n0.primitive  n1.primitive  n2.primitive  n3.primitive  n4.primitive  n5.primitive  n6.primitive  stretch0.primitive  stretch1.primitive  stretch2.primitive  stretch3.primitive  stretch4.primitive  stretch5.primitive  stretch6.primitive  stretch7.primitive  stretch8.primitive  test3D0.primitive  test3D1.primitive  test3D2.primitive  test3D3.primitive  test3D4.primitive  test3D5.primitive  test3D6.primitive
input/scalability/DD3D/: test3D0_16.primitive  test3D0_2.primitive  test3D0_32.primitive  test3D0_4.primitive  test3D0_8.primitive  test3D0_PD.primitive  test3D1_16.primitive  test3D1_2.primitive  test3D1_32.primitive  test3D1_4.primitive  test3D1_8.primitive  test3D1_PD.primitive  test3D2_16.primitive  test3D2_2.primitive  test3D2_32.primitive  test3D2_4.primitive  test3D2_8.primitive  test3D2_PD.primitive  test3D3_16.primitive  test3D3_2.primitive  test3D3_32.primitive  test3D3_4.primitive  test3D3_8.primitive  test3D3_PD.primitive  test3D4_16.primitive  test3D4_2.primitive  test3D4_32.primitive  test3D4_4.primitive  test3D4_8.primitive  test3D4_PD.primitive  test3D5_16.primitive  (+6 more)
input/tb1_horse_scalab/: horse136K_stretch_DOT.txt  horse38K_stretch_DOT.txt  horse79K_stretch_DOT.txt  horse7K_stretch_DOT.txt
input/tb2_monkey_mat_dt/: monkey18K_TSS_DOT_E2.5e4.txt  monkey18K_TSS_DOT_E4e5.txt  monkey18K_TSS_DOT_dt0.01.txt  monkey18K_TSS_DOT_dt0.04.txt  monkey18K_TSS_DOT_nu0.3.txt  monkey18K_TSS_DOT_nu0.45.txt
input/tb3_LTSS_TSS/: Armadillo27K_RBP_DOT_dt0.01.txt  Armadillo27K_RBP_DOT_dt0.025.txt  bunny30K_LTSS_DOT.txt  elf23K_TSS_DOT.txt  elf63K_LTSS_DOT.txt  hollowCat24K_RBP_DOT_dt0.01.txt  hollowCat24K_RBP_DOT_dt0.025.txt  horse7K_LTSS_DOT.txt  kingkong18K_TSS_DOT.txt  kingkong48K_LTSS_DOT.txt  monkey18K_TSS_DOT.txt
input/tb4_machine/: hollowCat24K_TSS_DOT16.txt  hollowCat24K_TSS_DOT6.txt  horse38K_TSS_DOT16.txt  horse38K_TSS_DOT6.txt  kingkong48K_SS_DOT16.txt  kingkong48K_SS_DOT6.txt  monkey18K_TSS_DOT16.txt
input/tb5_ablation/: bunny30K_SS_DOT-1K.txt  elf23K_TSS_DOT-1K.txt  hollowCat24K_TSS_DOT-1K.txt  horse38K_SS_DOT-1K.txt  horse38K_TSS_DOT-1K.txt  horse38K_stretch_DOT-1K.txt  horse79K_stretch_DOT-1K.txt  horse7K_SS_DOT-1K.txt  horse7K_stretch_DOT-1K.txt  kingkong18K_SS_DOT-1K.txt  kingkong18K_TSS_DOT-1K.txt  kingkong48K_SS_DOT-1K.txt  monkey18K_TSS_DOT-1K.txt
input/tetMeshes/: bar17K.msh  buddha2_f10000.msh  bunny.msh  cow_head.msh  cube_v14796.msh  horse_f10000.msh  kingkong_f20000.msh  male_2_f20000.msh  monkey18K.msh  sphere.msh  sphere_uniRemesh.msh  triceratops.msh
output/squash_inputUV_0_666_Simtest/: energyValPerIter.txt  log.txt
src/: AnimScripter.cpp  AnimScripter.hpp  Config.cpp  Config.hpp  Mesh.cpp  Mesh.hpp  main.cpp
src/Energy/: Energy.cpp  Energy.hpp
src/LinSysSolver/: CHOLMODSolver.cpp  CHOLMODSolver.hpp  EigenLibSolver.cpp  EigenLibSolver.hpp  LinSysSolver.hpp  PardisoSolver.cpp  PardisoSolver.hpp
src/TimeStepper/: ADMMDDTimeStepper.cpp  ADMMDDTimeStepper.hpp  ADMMTimeStepper.cpp  ADMMTimeStepper.hpp  DOTTimeStepper.cpp  DOTTimeStepper.hpp  LBFGSTimeStepper.cpp  LBFGSTimeStepper.hpp  Optimizer.cpp  Optimizer.hpp
src/Utils/: AutoFlipSVD.hpp  Diagnostic.hpp  IglUtils.cpp  IglUtils.hpp  METIS.hpp  MeshProcessing.hpp  SIMD_DOUBLE_MACROS.hpp  Timer.hpp  Triplet.h  Types.hpp
(+14 files in other folders)
